docs: simplify README and add install templates
- Archive previous README at docs/archive/README_2026-01-03.md
- Replace README.md with a minimal quick-start + CMake usage snippet
- Add platform template docs for Linux/macOS/Windows

--- a/docs/archive/README_2026-01-03.md
+++ b/docs/archive/README_2026-01-03.md
@@ -1,101 +1,223 @@
 # gentest
 
-`gentest` is an attribute-driven C++ test runner + code generator.
+`gentest` experiments with attribute-driven test discovery for C++ projects. Test entry points rely on standard C++
+attributes (`[[using gentest : ...]]`), then a clang-tooling generator materialises the runtime glue that invokes every
+discovered function through a single `gentest::run_all_tests` entry-point.
 
-Write tests using standard C++ attributes (`[[using gentest: ...]]`), run `gentest_codegen` during your build to
-generate `test_impl.cpp`, then link and run the produced test executable.
+## What's in the tree?
+- `include/gentest/runner.h` – lightweight assertion helpers and the declaration of `gentest::run_all_tests`.
+- `include/gentest/attributes.h` – guidance for annotating tests using
+  `[[using gentest : ...]]` attributes (no vendor macros required).
+- `tools/gentest_codegen` – the clang-based manifest generator that scans sources and emits `test_impl.cpp` files.
+- `cmake/GentestCodegen.cmake` – helper that wires code-generation results into any CMake target through the
+  `gentest_attach_codegen()` function.
+- `tests/` – suite corpus (unit, integration, failing, skiponly, fixtures, templates, mocking, ctor, benchmarks, concurrency, …)
+  that demonstrates codegen-driven execution through the shared `gentest::run_all_tests` harness.
+- The generated runtime uses `fmt::print` for output; CMake links `fmt::fmt` to test targets automatically.
 
->[!NOTE]
-> This README is intentionally minimal. The previous (full) README snapshot is archived at `docs/archive/README_2026-01-03.md`.
-
-## Requirements
-
-- CMake ≥ 3.31
-- A C++23 compiler
-- LLVM/Clang (for `gentest_codegen`)
-
->[!IMPORTANT]
-> `gentest_codegen` consumes your build’s `compile_commands.json`. Keep `CMAKE_EXPORT_COMPILE_COMMANDS=ON`.
-
-## Build & run this repo
-
+## Local workflow
+System toolchain (LLVM/Clang 20+ installed via your package manager):
 ```bash
 cmake --preset=debug-system
 cmake --build --preset=debug-system
 ctest --preset=debug-system --output-on-failure
 ```
 
-## Use in your project (CMake)
+Optional suites:
+- Allure writer tests are disabled by default. Enable them with:
+  ```bash
+  cmake --preset=debug-system -DGENTEST_ENABLE_ALLURE_TESTS=ON
+  cmake --build --preset=debug-system
+  ctest --preset=debug-system --output-on-failure  # or use the preset: ctest --preset=debug-system-allure
+  ```
+  Tests carry the label `allure`, so you can also run `ctest -L allure`.
 
-1) Add `gentest` (as a subproject or an installed package):
+### Meson
 
-```cmake
-# Option A: as a subproject
-add_subdirectory(path/to/gentest)
-
-# Option B: installed package
-find_package(gentest CONFIG REQUIRED)
-```
-
-2) Create a test executable and attach codegen:
-
-```cmake
-add_executable(my_tests main.cpp)
-target_link_libraries(my_tests PRIVATE gentest::gentest)
-gentest_attach_codegen(my_tests
-  OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/test_impl.cpp
-  SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/cases.cpp)
-add_test(NAME my_tests COMMAND my_tests)
-```
-
-`main.cpp`:
-
-```cpp
-#include "gentest/runner.h"
-
-int main(int argc, char** argv) {
-    return gentest::run_all_tests(argc, argv);
-}
-```
-
->[!WARNING]
-> Cross-compiling requires a *host* `gentest_codegen` executable. See the platform templates below for the intended wiring.
-
-## Minimal test case
-
-```cpp
-#include "gentest/attributes.h"
-#include "gentest/runner.h"
-using namespace gentest::asserts;
-
-namespace [[using gentest: suite("demo")]] demo {
-
-[[using gentest: test("basic")]]
-void basic() {
-    EXPECT_TRUE(1 + 1 == 2);
-}
-
-} // namespace demo
-```
-
-Run:
+Build and run the pass-only suites with Meson (uses system libclang-cpp and fmt headers; clang++ recommended). Meson
+expects a prebuilt `gentest_codegen` binary; configure its path via `-Dcodegen_path=...`:
 
 ```bash
-./my_tests --list-tests
-./my_tests
+cmake --preset=debug-system
+cmake --build --preset=debug-system --target gentest_codegen
+
+CC=clang CXX=clang++ meson setup build/meson -Dcodegen_path=build/debug-system/tools/gentest_codegen
+meson compile -C build/meson -j$(nproc)
+meson test -C build/meson --print-errorlogs
 ```
 
-## Platform guides (templates)
+### Bazel
 
-- Linux: `docs/install/linux.md`
-- macOS: `docs/install/macos.md`
-- Windows: `docs/install/windows.md`
+Build the code generator and run a generator lint test under Bazel. Note: disable ccache in Bazel sandboxes.
 
-## Troubleshooting / notes
+```bash
+bazel build //:gentest_codegen --action_env=CCACHE_DISABLE=1 --host_action_env=CCACHE_DISABLE=1 --cxxopt=-std=c++23 --linkopt=-std=c++23
+bazel test //:codegen_check_invalid --action_env=CCACHE_DISABLE=1 --host_action_env=CCACHE_DISABLE=1
+bazel test //:gentest_unit_bazel --action_env=CCACHE_DISABLE=1 --host_action_env=CCACHE_DISABLE=1
+```
 
-- Windows troubleshooting: `docs/windows_troubleshooting.md`
-- LLVM 21 location notes: `docs/llvm21-location-api-fix.md`
-- Include-path / compilation database notes: `INCLUDE_PATH_FIX.md`
+Experimental Bazel targets for generated test executables are provided but are not yet enabled by default for all suites, due to include-path and sandbox constraints.
+
+### Xmake
+
+An initial xmake.lua is provided to build `gentest_codegen` (via CMake) and wire codegen into test executables. This path
+is experimental:
+
+```bash
+xmake -y b gentest_unit_xmake
+xmake r gentest_unit_xmake -- --list
+```
+
+If linking `gentest_codegen` fails, ensure `libclang-cpp` is available and visible (e.g. `/usr/local/lib`) and that `fmt` headers are installed; the xmake build defines `FMT_HEADER_ONLY` by default.
+
+Legacy vcpkg-based toolchain (downloads and builds its own LLVM):
+```bash
+cmake --preset=debug
+cmake --build --preset=debug
+ctest --preset=debug --output-on-failure
+```
+
+LLVM/Clang discovery is automatic across versions 18–22 via `llvm-config`.
+No manual `LLVM_DIR`/`Clang_DIR` is required. If you do need to override
+discovery, you can still pass them explicitly.
+
+`gentest_codegen` relies on clang libraries and the active build’s `compile_commands.json`. vcpkg users can install the
+`llvm[clang,clang-tools-extra]` port plus `fmt` (pulled automatically for tests), and everyone else should ensure
+`clang++` is on `PATH` together with the host libstdc++ headers (e.g. `/usr/lib/gcc/x86_64-redhat-linux/15`).
+
+## Linkage (static vs shared)
+
+`gentest_runtime` links statically by default. To build it as a shared library instead, configure with
+`-DGENTEST_RUNTIME_SHARED=ON`. PIC is enabled only for the shared case.
+
+Examples:
+```bash
+# Default (static)
+cmake --preset=debug-system
+
+# Shared runtime
+cmake --preset=debug-system -DGENTEST_RUNTIME_SHARED=ON
+```
+
+## Authoring new test suites
+1. Create a test source (e.g. `tests/widgets/cases.cpp`) and tag functions with
+   namespaced attributes understood by the generator. You can attach a suite name to
+   a namespace once and write case names relative to it:
+   ```c++
+   namespace [[using gentest : suite("widgets")]] widgets {
+
+   [[using gentest : test("basic/health"), slow, linux, req("BUG-42")]]
+   void widget_smoke() {
+       gentest::expect_eq(create_widget().status(), widget_status::healthy);
+   }
+
+   } // namespace widgets
+   ```
+   The interface target `${PROJECT_NAME}` exports the right warning suppressions to
+   consumers (e.g. `-Wno-unknown-attributes` on Clang/GCC, `/wd5030` on MSVC), so no
+   local `#pragma` blocks are required.
+2. Add a target in `tests/CMakeLists.txt` and call `gentest_attach_codegen()` to hook the generator (the generated
+   source will include your `cases.cpp`, so you don't add it directly to the target sources):
+   ```cmake
+   add_executable(gentest_widgets_tests support/test_entry.cpp)
+   gentest_attach_codegen(gentest_widgets_tests
+       OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/widgets/test_impl.cpp
+       SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/widgets/cases.cpp)
+   add_test(NAME widgets COMMAND gentest_widgets_tests)
+   ```
+   The helper injects a custom command that runs `gentest_codegen`, consumes the active `compile_commands.json`, and
+   appends the generated `test_impl.cpp` to the target sources.
+
+`gentest_codegen` also supports a lint-only mode to validate attributes without emitting code:
+```bash
+$ ./build/tools/gentest_codegen --check --compdb ./build/debug -- -std=c++23 tests/unit/cases.cpp
+```
+
+## Clang-Tidy Check (optional)
+
+An optional clang-tidy plugin is provided to surface the same diagnostics in editors.
+
+- Build the module (only if Clang tidy dev libraries are available):
+  - Configure with `-DGENTEST_BUILD_TIDY_PLUGIN=ON` and build.
+- Load the check:
+  - `clang-tidy -load ./build/tools/tidy/libGentestTidyModule.so -checks=gentest-attributes <file.cpp>`
+- Behavior:
+  - Unknown `gentest::` attributes (including wrong arity/types) are hard errors.
+  - Attributes in other namespaces are warned as “ignored (unsupported attribute namespace)”.
+  - Duplicate/conflicting flags (e.g., `linux` vs `windows`) and duplicate `test`, `owner`, `group` are errors.
+
+This shares rules with the generator, so IDE diagnostics match codegen behavior.
+
+Running the resulting binary executes every annotated function, printing `[ PASS ]` / `[ FAIL ]` lines and returning a
+non-zero exit status when any test throws `gentest::failure`. Pass `--list` to enumerate discovered cases and inspect
+their metadata: the generator includes tags, requirement IDs, and skip markers that originate from the `[[using
+gentest : ...]]` attribute list.
+
+## Benchmarks
+
+Gentest supports lightweight benchmarks discovered via attributes and executed by the generated runner.
+
+- Author benches alongside tests, annotated with:
+  `[[using gentest : bench("suite/name")]] void my_bench();`
+- List benches and jitters: run the generated executable with `--list-benches`.
+- Run benches:
+  - Exact: `--run-bench=suite/name`
+  - Filter: `--bench-filter=pattern` (supports `*` and `?`)
+- Tuning flags (optional):
+  - `--bench-min-epoch-time-s=SECS` (default 0.01)
+  - `--bench-epochs=N` (default 12)
+  - `--bench-warmup=N` (default 1)
+  - `--bench-max-total-time-s=SECS` (default 1.0)
+- Summary header: `--bench-table` prints a per‑suite summary header. (Richer tables are planned.)
+
+Notes:
+- Bench functions should avoid gentest assertions (they are invoked in tight loops).
+- Fixture lifetimes are respected; suite/global fixtures are reused, ephemeral fixtures are constructed per invocation.
+- Utility helpers:
+  - `#include "gentest/bench_util.h"`
+    - `gentest::doNotOptimizeAway(x)` prevents the compiler from optimizing away values.
+    - `gentest::clobberMemory()` acts as a compiler barrier for memory operations.
+
+Parameters
+- `parameters(name, v1, v2, ...)` supports complex values and structs (e.g., `Blob{1,2}` or `std::complex<double>(1,2)`).
+
+### Jitter Benchmarks
+
+In addition to throughput-style benches, define jitter benchmarks to analyze timing variance and histograms:
+
+- Author with `[[using gentest : jitter("suite/name")]] void my_jitter();`
+- List: use `--list-benches` (jitters are included).
+- Run:
+  - Exact: `--run-jitter=suite/name`
+  - Filter: `--jitter-filter=pattern`
+- Options:
+  - `--jitter-bins=N` to control histogram resolution (default 10)
+
+Current output prints a histogram header for single jitter runs and a per‑suite “Jitter (suite)” header for filtered runs. Detailed histograms and statistics are planned.
+
+## Fixtures (member-function tests)
+
+Member functions can be tagged as tests and run via an auto-generated fixture harness. Three lifetimes are supported:
+
+- Ephemeral (default): each member test gets a fresh instance of the enclosing type.
+- Suite lifetime: mark the class/struct with `[[using gentest: fixture(suite)]]` to reuse a single instance for all
+  tests discovered in the same suite.
+- Global lifetime: mark the class/struct with `[[using gentest: fixture(global)]]` to share a single instance across
+  the full test run.
+
+Optional setup/teardown hooks are available by inheriting from the provided interfaces in `gentest/fixture.h`:
+
+```c++
+struct MyFixture : gentest::FixtureSetup, gentest::FixtureTearDown {
+    void setUp() override { /* assertions allowed here */ }
+    void tearDown() override { /* assertions allowed here */ }
+
+    [[using gentest: test("suite/member-a")]]
+    void a();
+
+    [[using gentest: test("suite/member-b")]]
+    void b();
+};
 
 struct [[using gentest: fixture(suite)]] SharedFixture { /* ... */ };
 ```
