Infer fixtures from params and harden fixture docs/ownership

--- a/docs/archive/README_2026-01-03.md
+++ b/docs/archive/README_2026-01-03.md
@@ -245,17 +245,16 @@ Execution and shuffling
 
 ### Free-Function Fixtures
 
-Use `[[using gentest: fixtures(A, B, C, ...)]]` on a free function to have the generator default-construct fixtures and
-pass them by reference to your test. No attributes are required on the fixture types; they are ordinary structs/classes.
+Fixture parameters are inferred directly from the free-function signature. No `fixtures(...)` function attribute is used.
+Types without `fixture(suite/global)` are local (per-invocation); `fixture(suite)` and `fixture(global)` types resolve to
+shared fixtures by namespace scope.
 
 Behavior
 - Ephemeral instances: a fresh instance of each fixture is constructed for every test invocation.
 - Setup/Teardown: if a fixture derives from `gentest::FixtureSetup` and/or `gentest::FixtureTearDown`, the generated
   runner automatically calls `setUp()` before the test body and `tearDown()` after it. Hooks remain optional.
 - Order: `setUp()` is called in the declaration order of fixtures; `tearDown()` is called in reverse order.
-- Scope: `fixtures(...)` applies to free functions only (not member tests). Stateful semantics are not supported here.
-- Composition: works with templates and parameters; fixture references appear first in the function’s argument list,
-  followed by any parameterized values.
+- Composition: works with templates and parameters; fixture and value arguments may be interleaved in the function signature.
 
 Example
 ```c++
@@ -271,7 +270,7 @@ struct B { const char* msg = "ok"; };
 class C { public: int v = 7; };
 } // namespace fx
 
-[[using gentest: test("fixtures/free/basic"), fixtures(A, B, C)]]
+[[using gentest: test("fixtures/free/basic")]]
 constexpr void free_basic(fx::A& a, fx::B& b, fx::C& c) {
     gentest::expect_eq(a.phase, 1, "A::setUp ran");
     gentest::expect(std::string(b.msg) == "ok", "default value");
@@ -279,7 +278,7 @@ constexpr void free_basic(fx::A& a, fx::B& b, fx::C& c) {
 }
 
 // With parameters too
-[[using gentest: test("fixtures/free/with-params"), fixtures(A), parameters(int, 1, 2)]]
+[[using gentest: test("fixtures/free/with-params"), parameters(int, 1, 2)]]
 void free_with_params(fx::A& a, int v) {
     (void)a;
     gentest::expect(v == 1 || v == 2, "param axis");
