Unify run/kind CLI and harden death harness discovery

--- a/docs/archive/README_2026-01-03.md
+++ b/docs/archive/README_2026-01-03.md
@@ -160,9 +160,10 @@ Gentest supports lightweight benchmarks discovered via attributes and executed b
 - Author benches alongside tests, annotated with:
   `[[using gentest : bench("suite/name")]] void my_bench();`
 - List benches and jitters: run the generated executable with `--list-benches`.
+- Use `--kind` to scope `--run` / `--filter` to `test|bench|jitter` (default `all`).
 - Run benches:
-  - Exact: `--run-bench=suite/name`
-  - Filter: `--bench-filter=pattern` (supports `*` and `?`)
+  - Exact: `--run=suite/name --kind=bench`
+  - Filter: `--filter=pattern --kind=bench` (supports `*` and `?`)
 - Tuning flags (optional):
   - `--bench-min-epoch-time-s=SECS` (default 0.01)
   - `--bench-epochs=N` (default 12)
@@ -188,8 +189,8 @@ In addition to throughput-style benches, define jitter benchmarks to analyze tim
 - Author with `[[using gentest : jitter("suite/name")]] void my_jitter();`
 - List: use `--list-benches` (jitters are included).
 - Run:
-  - Exact: `--run-jitter=suite/name`
-  - Filter: `--jitter-filter=pattern`
+  - Exact: `--run=suite/name --kind=jitter`
+  - Filter: `--filter=pattern --kind=jitter`
 - Options:
   - `--jitter-bins=N` to control histogram resolution (default 10)
 
@@ -724,7 +725,7 @@ Every test has a final, user-facing name used by the CLI for listing and selecti
 
 - CLI examples
   - List exact names: `--list-tests`
-  - Run exact: `--run-test=n1/n2/my_case<int>(42)`
+  - Run exact: `--run=n1/n2/my_case<int>(42)`
   - Filter: `--filter=n1/*/my_case*`
 
 See [`AGENTS.md`](AGENTS.md) for contribution guidelines and additional workflow conventions.
